<resources>
    <string name="app_name">Parcial</string>
    <string name="action_settings">Admin</string>

    <!-- App Titel . -->
    <string name="title_activity_user">Events Cool</string>
    <string name="title_activity_admin">Events Cool</string>

    <!-- Create User . -->
    <string name="hint_usersName">UserName</string>
    <string name="hint_name">Name</string>
    <string name="hint_lastName">Lats Name</string>
    <string name="hint_age">Age</string>
    <string name="hint_nombre">Nombre</string>
    <string name="hint_password">Password</string>

    <!-- Create Event  . -->
    <string name="hint_nameEvent">Nombre Evento</string>
    <string name="hint_attenEvent">Encargado del Evento</string>
    <string name="hint_cityEvent">Regíon/Ciudad</string>
    <string name="hint_dateEvent">Seleccione Fecha</string>
    <string name="hint_hourEvent">Seleccione Hora</string>
    <string name="hint_requirementEvent">Requisitos</string>
    <string name="hint_descriptionEvent">Descripción</string>
    <string name="txt_event">Lista Eventos</string>


    <!-- Prueba . -->
    <string name="hint_date">Fecha:</string>
    <string name="hint_hour">Hora:</string>
    <string name="hint_type">Tipo:</string>
    <string name="txt_idEvent">Codigo:</string>
    <string name="action_sing_out">Sing out</string>
</resources>
