<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/lin_idEvent"
    android:layout_width="match_parent"
    android:layout_height="135dp"
    android:onClick="ShowEvent"
    android:background="#30b390"

    >


    <LinearLayout
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:padding="@dimen/padding_image">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/presence_online" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="@dimen/dimen_zero"
        android:layout_height="153dp"
        android:layout_weight="3"
        android:orientation="vertical"
        android:weightSum="1">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_marginTop="@dimen/vertical_margin">

            <TextView
                android:id="@+id/txt_nameEvent"
                style="@style/Base.TextAppearance.AppCompat.Subhead"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/hint_nameEvent" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/txt_idEvent" />

            <TextView
                android:id="@+id/txt_idEvent"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="@dimen/size_id_student"
                android:layout_height="wrap_content"
                android:text="165" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/hint_type" />

            <TextView
                android:id="@+id/txt_typeEvent"
                style="@style/Base.TextAppearance.AppCompat.Body1"
                android:layout_width="@dimen/size_id_student"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/side_margin"
                android:text="Deportivo" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/vertical_margin"
            android:layout_marginLeft="@dimen/side_margin"
            android:layout_marginRight="@dimen/side_margin"
            android:layout_weight="0.77">

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/hint_date" />

            <TextView
                android:id="@+id/txt_dateEvent"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/side_margin"
                android:text="15/05/1996" />

            <TextView
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/side_margin"
                android:text="@string/hint_hour" />

            <TextView
                android:id="@+id/txt_hourEvent"
                style="@style/Base.TextAppearance.AppCompat.Body2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="@dimen/side_margin"
                android:text="12:00" />
        </LinearLayout>

    </LinearLayout>

</LinearLayout>